fix event image spacing (#9093)

--- a/app/styles/partials/overrides.scss
+++ b/app/styles/partials/overrides.scss
@@ -27,6 +27,7 @@ body.dimmable.undetached.dimmed {
 
 .ui.fluid.container {
   padding: 0 20px;
+  margin-top: 0;
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
